--- a/src/inet/networklayer/arp/ipv4/ChangeLog
+++ b/src/inet/networklayer/arp/ipv4/ChangeLog
@@ -1,3 +1,15 @@
+2019-01-07  Mani Amoozadeh
+
+	Added ARP probe.
+
+2019-01-06  Mani Amoozadeh
+
+	Proxy arp can now be enabled/disabled per interface.
+
+2019-01-05  Mani Amoozadeh
+
+	Removed useProxyARP parameter from ipv4 module.
+
 2018-10-04  Zoltan Bojthe
 
 	Changed Arp and GlobalArp base classes to OperationalBase.
