--- a/src/inet/networklayer/common/ChangeLog
+++ b/src/inet/networklayer/common/ChangeLog
@@ -1,3 +1,12 @@
+2019-01-14  Zoltan Bojthe
+
+	Removed obsolete InterfaceEntry::detailedInfo() function.
+
+2019-01-08  Zoltan Bojthe
+
+	InterfaceEntry::setState(DOWN) sets carrier to false.
+	Changed InterfaceEntry::str() to be more verbose.
+
 2018-11-20  Mani Amoozadeh
 
 	Fixed bug #367.
