--- a/src/inet/networklayer/contract/ChangeLog
+++ b/src/inet/networklayer/contract/ChangeLog
@@ -1,3 +1,11 @@
+2019-01-18  Zoltan Bojthe
+
+	Fixed unsigned long != uint64_t on some systems in CLNS.
+
+2019-01-11  Zoltan Bojthe
+
+	Fixed compiler warnings: compare signed/unsigned, sprintf buffer was too short.
+
 2018-09-19  Zoltan Bojthe
 
 	Adapted to the new protocol specific data storage API of InterfaceEntry.
