--- a/src/inet/networklayer/ipv4/ChangeLog
+++ b/src/inet/networklayer/ipv4/ChangeLog
@@ -1,3 +1,13 @@
+2019-01-07  Zoltan Bojthe
+
+	Added handling interface state changed signal to Ipv4RoutingTable.
+	Delete routing entries when an interface goes down.
+	Do not add netmask route entries for interfaces in down state.
+
+2019-01-05  Mani Amoozadeh
+
+	Removed useProxyARP parameter from ipv4 module.
+
 2018-12-19  Zoltan Bojthe
 
 	Moved omnetpp::cEventlogListener related code from RoutingTableRecorder to a separate branch.
