--- a/src/inet/routing/rip/ChangeLog
+++ b/src/inet/routing/rip/ChangeLog
@@ -1,3 +1,7 @@
+2019-01-14  Zoltan Bojthe
+
+	Fixed signal handler: always process deleted routes.
+
 2018-10-05  Zoltan Bojthe
 
 	Changed base class of Rip to RoutingProtocolBase.
