--- a/src/inet/applications/packetdrill/ChangeLog
+++ b/src/inet/applications/packetdrill/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-3.x ======
 
+2018-03-29  Irene Ruengeler
+
+	Set the DupTsn relative to the localDiffTSN
+
 2018-03-21  ------ inet-3.6.4 released ------
 
 2017-12-22  ------ inet-3.6.3 released ------
