--- a/src/inet/applications/voipstream/ChangeLog
+++ b/src/inet/applications/voipstream/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-3.x ======
 
+2018-01-12  Levente Meszaros
+
+	Voip: Removed include statement for obsolete header file.
+
 2018-03-21  ------ inet-3.6.4 released ------
 
 2017-12-22  ------ inet-3.6.3 released ------
