--- a/src/inet/linklayer/ethernet/ChangeLog
+++ b/src/inet/linklayer/ethernet/ChangeLog
@@ -1,5 +1,15 @@
 ====== inet-3.x ======
 
+2018-10-10  Zoltan Bojthe
+
+	eth: fixed 'EtherMAC swallows frames when PAUSE is engaged (#391)'
+	(author: Danushka Menikkumbura)
+
+2018-10-10  Zoltan Bojthe
+
+	eth: fixed 'Cannot abort PAUSE (LFC) before timeout (#390)' (author:
+	Danushka Menikkumbura)
+
 2018-03-21  ------ inet-3.6.4 released ------
 
 2017-12-22  ------ inet-3.6.3 released ------
