--- a/src/inet/networklayer/ipv6/ChangeLog
+++ b/src/inet/networklayer/ipv6/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-3.x ======
 
+2019-02-11  Zoltan Bojthe
+
+	AdvPrefix: added constructors
+
 2018-03-21  ------ inet-3.6.4 released ------
 
 2017-12-22  ------ inet-3.6.3 released ------
