--- a/src/inet/transportlayer/tcp/ChangeLog
+++ b/src/inet/transportlayer/tcp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-3.x ======
 
+2019-02-11  Zoltan Bojthe
+
+	TCP: bugfix: static variables was removed, but stayed in header
+
 2018-03-21  ------ inet-3.6.4 released ------
 
 2017-12-22  ------ inet-3.6.3 released ------
