--- a/src/inet/visualizer/scene/ChangeLog
+++ b/src/inet/visualizer/scene/ChangeLog
@@ -1,5 +1,10 @@
 ====== inet-3.x ======
 
+2019-04-12  Rudolf Hornig
+
+	visualizer: removed dependence on ObjectLocatorNode as it is removed in
+	later versions of osgEarth
+
 2018-03-21  ------ inet-3.6.4 released ------
 
 2017-12-22  ------ inet-3.6.3 released ------
