--- a/showcases/README
+++ b/showcases/README
@@ -1,10 +1,12 @@
 About INET Showcases
 ====================
 
-This repository is normally checked out as a submodule of the
-INET Framework repository. In addition to the showcase simulations
-themselves (NED files, ini files and all), this repository also
-serves as input for the INET documentation.
+This folder contains the INET showcase simulations and the source code of their
+associated web pages. Media files (images and videos) for the pages are
+in a separate repository (https://github.com/inet-framework/media)
+to keep the core  INET repository small; that repo needs to be checked out
+under $INET/media if you want to build the web pages.
 
 See $INET/doc/src/README for more information on building the documentation.
+
 
