--- a/src/inet/applications/tcpapp/ChangeLog
+++ b/src/inet/applications/tcpapp/ChangeLog
@@ -1,5 +1,14 @@
 ====== inet-4.x ======
 
+2019-10-17  Levente Mészáros
+
+	Added queueing based TelnetClientApp and TelnetServerApp.
+	Added removing SocketInd tag when a packet is processed in SocketIo modules.
+
+2019-10-09  Levente Mészáros
+
+	Fixed TcpSessionApp to throw runtime error on unimplemented listening.
+
 2019-09-22  Mani Amoozadeh
 
 	Updated TCP apps to use the new TTL/TOS options.
