--- a/src/inet/linklayer/acking/ChangeLog
+++ b/src/inet/linklayer/acking/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-14  Levente Mészáros
+
+	Removed allowunconnected because queue in/out gates are loose.
+
 2019-06-17  Zoltan Bojthe
 
 	Added AckingMacToEthernetPcapRecorderHelper.
