--- a/src/inet/linklayer/contract/ChangeLog
+++ b/src/inet/linklayer/contract/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-14  Levente Mészáros
+
+	Replaced txQueueLimit with queue.frameCapacity.
+
 2019-02-18  Levente Mészáros
 
 	Ported to the new queueing API.
