--- a/src/inet/linklayer/csmaca/ChangeLog
+++ b/src/inet/linklayer/csmaca/ChangeLog
@@ -1,5 +1,17 @@
 ====== inet-4.x ======
 
+2019-10-14  Levente Mészáros
+
+	Dropped queue length related parameters from MAC modules.
+
+	The queue packet capacity and data capacity can already be set on the
+	queue. If the queue module is more complicated then these parameters are
+	meaningless anyway, because there may be way more parameters than one.
+
+2019-10-14  Levente Mészáros
+
+	Removed allowunconnected because queue in/out gates are loose.
+
 2019-09-23  Levente Mészáros
 
 	The length field is not optional at the moment.
