--- a/src/inet/linklayer/ieee80211/mac/channelaccess/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/channelaccess/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-14  Levente Mészáros
+
+	Removed allowunconnected because queue in/out gates are loose.
+
 2019-03-04  Zoltan Bojthe
 
 	Fixed deletion of a module, use deleteModule().
