--- a/src/inet/linklayer/ieee802154/ChangeLog
+++ b/src/inet/linklayer/ieee802154/ChangeLog
@@ -1,5 +1,17 @@
 ====== inet-4.x ======
 
+2019-10-14  Levente Mészáros
+
+	Dropped queue length related parameters from MAC modules.
+
+	The queue packet capacity and data capacity can already be set on the
+	queue. If the queue module is more complicated then these parameters are
+	meaningless anyway, because there may be way more parameters than one.
+
+2019-10-10  Levente Mészáros
+
+	Fixed statistic names reported by Edward Longman.
+
 2019-06-03  Zoltan Bojthe
 
 	Renamed	transmissionQueue --> txQueue and popFromTransmissionQueue() --> popTxQueue().
