Queueing: Renamed PacketMarker -> PacketLabeler, MarkerClassifier -> LabelClassifier, and MarkerScheduler -> LabelScheduler.

--- a/src/inet/queueing/classifier/ChangeLog
+++ b/src/inet/queueing/classifier/ChangeLog
@@ -7,5 +7,5 @@
 	components were either ported or completely replaced with components of the new
 	queueing package.
 
-	Added new NED simple modules: MarkovClassifier, MarkerClassifier, PacketClassifier,
+	Added new NED simple modules: MarkovClassifier, LabelClassifier, PacketClassifier,
 	PriorityClassifier, and UserPriorityClassifier.
