--- a/src/inet/applications/netperfmeter/ChangeLog
+++ b/src/inet/applications/netperfmeter/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-18  Zoltan Bojthe
+
+	Changed to use msg constructor to set message name and message kind.
+
 2019-05-17  Zoltan Bojthe
 
 	Removed NetPerfMeterHost, fingerprints changed.
