--- a/src/inet/applications/udpapp/ChangeLog
+++ b/src/inet/applications/udpapp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-26  Levente Mészáros
+
+	Added NED documentations to new applications with composable traffic source and sink modules.
+
 2019-10-17  Levente Mészáros
 
 	Added removing SocketInd tag when a packet is processed in SocketIo modules.
