--- a/src/inet/linklayer/acking/ChangeLog
+++ b/src/inet/linklayer/acking/ChangeLog
@@ -4,6 +4,14 @@
 
 	Removed allowunconnected because queue in/out gates are loose.
 
+2019-08-05  Marcell Juhász
+
+	Removed setting chunkLength from MSG.
+
+2019-07-30  Marcell Juhász
+
+	Fixed AckingMacHeaderSerializer.
+
 2019-06-17  Zoltan Bojthe
 
 	Added AckingMacToEthernetPcapRecorderHelper.
