--- a/src/inet/linklayer/ieee80211/mac/originator/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/originator/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-21  Levente Mészáros
+
+	Fixed taking packet ownership from TX queue after popping a packet.
+
 2019-02-15  Levente Mészáros
 
 	Ported to the new queueing API.
