--- a/src/inet/linklayer/ieee8021d/common/ChangeLog
+++ b/src/inet/linklayer/ieee8021d/common/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-10-31  Zoltan Bojthe
+
+	Redesigned BPDU packets.
+
+2019-08-13  Marcell Juhász
+
+	Added Ieee8021dBpduSerializer
+
 2019-07-19  Zoltan Bojthe
 
 	Fixed ieee802.1d BPDU frame format: field order, field type.
