--- a/src/inet/linklayer/ieee8021d/stp/ChangeLog
+++ b/src/inet/linklayer/ieee8021d/stp/ChangeLog
@@ -1,5 +1,10 @@
 ====== inet-4.x ======
 
+2019-10-31  Zoltan Bojthe
+
+	Redesigned BPDU packets.
+	Fixed STP BPDU TCN packet length, correct value is 4 byte.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-10-17  Zoltan Bojthe
