--- a/src/inet/routing/ospfv2/messagehandler/ChangeLog
+++ b/src/inet/routing/ospfv2/messagehandler/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-18  Zoltan Bojthe
+
+	Moved the enum Ospfv2TimerType to MSG file to generate cEnum.
+
 2019-07-17  Zoltan Bojthe
 
 	Added CRC calculator functions.
