--- a/src/inet/routing/ospfv3/neighbor/ChangeLog
+++ b/src/inet/routing/ospfv3/neighbor/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-18  Zoltan Bojthe
+
+	Changed to use msg constructor to set message name and message kind.
+
 2019-09-26  Zoltan Bojthe
 
 	Refactored and adapted to the INET 4.x branch.
