--- a/src/inet/transportlayer/sctp/ChangeLog
+++ b/src/inet/transportlayer/sctp/ChangeLog
@@ -1,5 +1,10 @@
 ====== inet-4.x ======
 
+2019-10-18  Zoltan Bojthe
+
+	Added message kind infos (name of used cEnum).
+	Changed to use msg constructor to set message name and message kind.
+
 2019-09-18  Zoltan Bojthe
 
 	Fixed memory leak.
