--- a/src/inet/transportlayer/tcp/flavours/ChangeLog
+++ b/src/inet/transportlayer/tcp/flavours/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-24  Zoltan Bojthe
+
+	Fixed "TcpConnection is a submodule" bug.
+
 2019-09-06  Zoltan Bojthe
 
 	Removed recordStats NED parameter.
@@ -8,4 +12,3 @@
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-06-27  ------ inet-4.0.0 released ------
-
