--- a/src/inet/transportlayer/tcp_lwip/ChangeLog
+++ b/src/inet/transportlayer/tcp_lwip/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-18  Zoltan Bojthe
+
+	Changed to use msg constructor to set message name and message kind.
+
 2019-09-09  Zoltan Bojthe
 
 	Converted TcpLwipConnection to submodule of TcpLwip.
