--- a/src/inet/transportlayer/udp/ChangeLog
+++ b/src/inet/transportlayer/udp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-18  Zoltan Bojthe
+
+	Added message kind properties.
+
 2019-09-24  Zoltan Bojthe
 
 	Changed base class to TransportProtocolBase.
