--- a/src/inet/linklayer/ieee80211/mac/blockack/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/blockack/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-08-21  Marcell Juhász
+
+	Renamed duration to durationField.
+
 2019-02-13  Levente Mészáros
 
 	Added log statements for setting the duration field.
