--- a/src/inet/emulation/transportlayer/udp/ChangeLog
+++ b/src/inet/emulation/transportlayer/udp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-01  Levente Mészáros
+
+	Added packetNameFormat parameter to ExtLowerUdp.
+
 2019-09-17  TÖRÖK Attila
 
 	Set the "reuse address" option on the host UDP socket in ExtLowerUdp.
