--- a/src/inet/applications/packetdrill/ChangeLog
+++ b/src/inet/applications/packetdrill/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-12  Zoltan Bojthe
+
+	Re-generated lexer.cc for suppress warning (signed/unsigned comparison)
+
+2019-11-08  Zoltan Bojthe
+
+	Added checking result value of syscal...() functions in PacketDrillApp.
+
 2019-10-18  Zoltan Bojthe
 
 	Changed to use msg constructor to set message name and message kind.
