--- a/src/inet/applications/rtpapp/ChangeLog
+++ b/src/inet/applications/rtpapp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-31  Zoltan Bojthe
+
+	Moved kind enums to MSG files.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-10-25  Zoltan Bojthe
