--- a/src/inet/emulation/linklayer/ieee80211/ChangeLog
+++ b/src/inet/emulation/linklayer/ieee80211/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-06  Levente Mészáros
+
+	Removed numExtInterfaces parameter, ext[*] submodule vector.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-12-17  Levente Mészáros
