--- a/src/inet/linklayer/common/ChangeLog
+++ b/src/inet/linklayer/common/ChangeLog
@@ -1,5 +1,10 @@
 ====== inet-4.x ======
 
+2019-11-05  Zoltan Bojthe
+
+	Added isLocal() function to MacAddress for testing U/L bit (fix for #94).
+	Moved VlanTag.msg to common folder.
+
 2019-02-20  Levente Mészáros
 
 	Added UserPriorityPacketComparatorFunction needed to restore original CsmaCaMac functionality.
