--- a/src/inet/linklayer/ethernet/ChangeLog
+++ b/src/inet/linklayer/ethernet/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-11  Levente Mészáros
+
+	Fixed packetCapacity default value, should not be hard-coded.
+
 2019-10-14  Levente Mészáros
 
 	Removed allowunconnected because queue in/out gates are loose.
