--- a/src/inet/linklayer/ieee8021q/ChangeLog
+++ b/src/inet/linklayer/ieee8021q/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-05  Zoltan Bojthe
+
+	Moved VlanTag.msg to common folder.
+
 2019-04-29  Zoltan Bojthe
 
 	Removed unnecessary FCS calculations.
