--- a/src/inet/networklayer/configurator/base/ChangeLog
+++ b/src/inet/networklayer/configurator/base/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-07  Levente Mészáros
+
+	Switchted to use SSID instead of BSSID if MiB is available.
+
+2019-10-30  Levente Mészáros
+
+	Fixed address assignment with simplified mgmt.
+
 2019-02-07  Levente Mészáros
 
 	Fixed bug #65 in Ipv4NetworkConfigurator.
