--- a/src/inet/networklayer/contract/ChangeLog
+++ b/src/inet/networklayer/contract/ChangeLog
@@ -1,5 +1,17 @@
 ====== inet-4.x ======
 
+2019-11-12  Zoltan Bojthe
+
+	Rename functions for getFoo()/findFoo() convention in InterfaceTable.
+
+2019-11-08  Zoltan Bojthe
+
+	Converted sprintf to streamout in clns.
+
+2019-11-07  Zoltan Bojthe
+
+	Added getFirstNonLoopbackInterface() to InterfaceTable.
+
 2019-06-17  Andras Varga
 
 	Changed getInterfaceById() to raise an error on invalid IDs.
