--- a/src/inet/networklayer/icmpv6/ChangeLog
+++ b/src/inet/networklayer/icmpv6/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-08  Levente Mészáros
+
+	Fixed use after delete.
+
 2019-09-02  Zoltan Bojthe
 
 	Optimized Tag usage.
