--- a/src/inet/networklayer/ipv6/ChangeLog
+++ b/src/inet/networklayer/ipv6/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-11  Zoltan Bojthe
+
+	Added notifications about changing the InterfaceProtocolData set in InterfaceEntry.
+
+2019-11-11  Levente Mészáros
+
+	Added @packetData annotation to non-Chunk based packet parts.
+
 2019-09-02  Zoltan Bojthe
 
 	Optimized Tag usage.
