--- a/src/inet/networklayer/nexthop/ChangeLog
+++ b/src/inet/networklayer/nexthop/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-11  Zoltan Bojthe
+
+	Added notifications about changing the InterfaceProtocolData set to InterfaceEntry.
+
+2019-11-08  Levente Mészáros
+
+	Fixed minor issues found by static analysis.
+
 2019-09-02  Zoltan Bojthe
 
 	Optimized Tag usage.
