--- a/src/inet/physicallayer/ieee80211/mode/ChangeLog
+++ b/src/inet/physicallayer/ieee80211/mode/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-12  Levente Mészáros
+
+	Fixed #481
+
 2019-09-23  Levente Mészáros
 
 	Renamed carrierFrequency to centerFrequency.
