--- a/src/inet/physicallayer/ieee80211/packetlevel/ChangeLog
+++ b/src/inet/physicallayer/ieee80211/packetlevel/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-08  Levente Mészáros
+
+	Fixed b -> B length conversion.
+
 2019-09-23  Marcell Juhász
 
 	Added popIeee80211PhyHeaderAtFront() and peekIeee80211PhyHeaderAtFront() to Ieee80211Radio.
