--- a/src/inet/routing/bgpv4/bgpmessage/ChangeLog
+++ b/src/inet/routing/bgpv4/bgpmessage/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-11  Levente Mészáros
+
+	Added @packetData annotation to non-Chunk based packet parts.
+
+2019-11-08  Levente Mészáros
+
+	Fixed memory leaks detected by static analysis.
+
 2019-07-24  Zoltan Bojthe
 
 	Fixed c++17 namespaces; eliminate 'unused variable' warnings.
