--- a/src/inet/routing/dsdv/ChangeLog
+++ b/src/inet/routing/dsdv/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-08  Levente Mészáros
+
+	Fixed memory leaks detected by static analysis.
+
 2019-09-02  Zoltan Bojthe
 
 	Optimized Tag usage.
