--- a/src/inet/routing/ospfv3/interface/ChangeLog
+++ b/src/inet/routing/ospfv3/interface/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-12  Zoltan Bojthe
+
+	Fixed code to nullptr exception safe.
+
 2019-10-18  Zoltan Bojthe
 
 	Changed to use msg constructor to set message name and message kind.
