--- a/src/inet/routing/ospfv3/process/ChangeLog
+++ b/src/inet/routing/ospfv3/process/ChangeLog
@@ -1,5 +1,10 @@
 ====== inet-4.x ======
 
+2019-11-12  Zoltan Bojthe
+
+	Fixed code to nullptr exception safe.
+	Fixed duplication in condition.
+
 2019-10-18  Zoltan Bojthe
 
 	Changed to use msg constructor to set message name and message kind.
