--- a/src/inet/transportlayer/tcp_nsc/ChangeLog
+++ b/src/inet/transportlayer/tcp_nsc/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-10-31  Zoltan Bojthe
+
+	Fixed messageKinds in NED.
+
 2019-10-18  Zoltan Bojthe
 
 	Changed to use msg constructor to set message name and message kind.
