--- a/src/inet/visualizer/common/ChangeLog
+++ b/src/inet/visualizer/common/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-05  Levente Mészáros
+
+	Fixed memory leaks caused by not cleaning up after destruction.
+
 2019-02-11  Levente Mészáros
 
 	Extended StatisticCanvasVisualizer with displaying the value using an IIndicatorFigure.
