--- a/src/inet/visualizer/physicallayer/ChangeLog
+++ b/src/inet/visualizer/physicallayer/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-05  Levente Mészáros
+
+	Fixed memory leaks caused by not cleaning up after destruction.
+
 2019-10-07  Levente Mészáros
 
 	Fixed disabled radio feature.
