--- a/src/inet/visualizer/power/ChangeLog
+++ b/src/inet/visualizer/power/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-05  Levente Mészáros
+
+	Fixed memory leaks caused by not cleaning up after destruction.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-09-18  Levente Mészáros
