--- a/src/inet/visualizer/scene/ChangeLog
+++ b/src/inet/visualizer/scene/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-08-24  Andras Varga
+
+	Added OpenStreetMapSceneCanvasVisualizer.
+
 2019-06-05  Levente Mészáros
 
 	Implemented the creation and deletion of network node visualizations for dynamic modules.
